--- a/index.css
+++ b/index.css
@@ -4,22 +4,23 @@
 }
 
 nav{
-    background-color: rgb(3, 2, 32);
+    margin-top: 20px;
+   display: flex;
+   justify-content: space-around;
 }
 
-ul{
+.nav{
+    width: 600px;
+    background-color: rgb(1, 4, 36);
     display: flex;
-    padding: 20px;
     justify-content: space-around;
-}
-li{
-    text-align: center;
+    padding: 20px;
+    border-radius: 10px;
 }
 
-li a{
+.nav a{
     color: white;
-    font-size: 15px;
-    font-weight: 800;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-decoration: none;
 }
+
