subiendo web modificada

--- a/index.css
+++ b/index.css
@@ -24,3 +24,41 @@ nav{
     text-decoration: none;
 }
 
+
+.relleno{
+    padding: 10px 7px;
+    background-color: bisque;
+    border-radius: 5px; 
+    margin: 10px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    list-style: none;
+}
+
+.imagen{
+    list-style: none;
+    margin: 10px 10px;
+}
+
+.boton{
+    padding: 10px 7px;
+    background-color: bisque;
+    border-radius: 5px;
+    margin: 10px;
+    list-style: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.logo{
+    width: 100px;
+    height: 80px;
+    object-fit:cover;
+}
+
+.logo img{
+    width: 100%;
+    border-radius: 10px;
+}
+
+.man{
+    list-style: none !important;
+}
